# G_004

./: .gitattributes  .gitignore  G_004.uproject
Config/: DefaultEngine.ini  DefaultGame.ini
Content/Input/: IMC_Default.uasset
Content/Levels/: Cube1.umap
Content/ThirdPerson/: Lvl_ThirdPerson.umap
Content/Variant_Platforming/: Lvl_Platforming.umap
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/: .clang-format  .clang-format-ignore  .clang-format.sh  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  export_micro.sh
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/.github/: funding.yml
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/.github/workflows/: build.yml  codeql.yml
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/: CMakeLists.txt
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Private/GCore/Interfaces/: IAudioDevice.cpp  IPlatformHardware.cpp
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Private/GCore/Utils/: CR32.cpp
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Private/GImplementations/Libraries/Base/: GamepadBase.cpp
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Private/GImplementations/Libraries/DualSense/: DualSenseLibrary.cpp
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Private/GImplementations/Libraries/DualShock/: DualShockLibrary.cpp
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Private/GImplementations/Utils/: GamepadOutput.cpp
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Interfaces/: IAudioDevice.h  IDeviceRegistry.h  IPlatformHardware.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Interfaces/Segregations/: IGamepadBase.h  IGamepadHaptics.h  IGamepadLightbar.h  IGamepadRumbles.h  IGamepadSensors.h  IGamepadSettings.h  IGamepadStatus.h  IGamepadTouch.h  IGamepadTrigger.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Templates/: TAudioDeviceRegistry.h  TBasicDeviceRegistry.h  TGenericHardwareInfo.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Types/: DSCoreTypes.h  ECoreGamepad.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Types/Structs/Config/: AudioHaptics.h  GamepadCalibration.h  GamepadFeature.h  GamepadLightbar.h  GamepadLigthbarFlash.h  GamepadPlayerLed.h  GamepadRumbles.h  GamepadTriggers.h  GamepadTriggersHaptic.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Types/Structs/Context/: DeviceContext.h  InputContext.h  OutputContext.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GCore/Utils/: CR32.h  SoDefines.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GImplementations/Libraries/Base/: GamepadBase.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GImplementations/Libraries/DualSense/: DualSenseLibrary.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GImplementations/Libraries/DualShock/: DualShockLibrary.h
Plugins/Controll1a9e9fae517dV6/Source/WindowsDualsense_ds5w/Private/Gamepad-Core/Source/Public/GImplementations/Utils/: GamepadInput.h  GamepadOutput.h  GamepadSensors.h  GamepadTouch.h  GamepadTrigger.h
Source/: G_004.Target.cs  G_004Editor.Target.cs
Source/G_004/: BossAI.cpp  BossAI.h  G_004.cpp  (+12 more)
(+61 files in other folders)
